Always exit with a non-zero code upon failing